
[project.optional-dependencies]
dev = ["ruff", "pre-commit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # "A",  # flake8-builtins
    # "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    # "C90",  # mccabe complexity
    "COM",  # flake8-commas
    "E",  # pycodestyle errors
    "F",  # pyflakes
    # "FBT",  # flake8-boolean-trap
    "FLY",  # flynt
    "I",  # isort
    "ISC",  #  flake8-implicit-str-concat
    "LOG",  # flake8-logging
    # "N",  # pep8-naming
    # "PERF",  # Perflint
    # "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    # "PL",  # pylint
    # "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    # "RET",  # flake8-return
    "RSE",  # flake8-raise
    # "RUF",
    # "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "T10",  # flake8-debugger
    # "T20",  # flake8-print
    # "TCH",  # flake8-type-checking
    # "TD",  # flake8-todos
    "TID",  # flake8-tidy-imports
    # "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodesytle warnings
    # "ANN",  # flake8-annotations
    # "CPY",  # flake8-copyright
    # "D",  # pydocstyle
    # "FIX",  # flake8-fixme
]
ignore = [
    "ANN101",
    "ANN102",
    "TD003",

    "RUF001",
    "RUF002",
    "RUF003",

    "ISC001",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"other/*.py" = ["E402", "E501"]
"tools/json_create.py" = ["E501"]
"request.py" = ["E501"]
"pricing_factors.py" = ["E501"]
